--- a/src/component/Burger/Burger/Burger.scss
+++ b/src/component/Burger/Burger/Burger.scss
@@ -4,8 +4,8 @@
 * Date-Time: 14/10/2019-22:44
 */
 .Burger {
-  width: 100%;
-  height: 500px;
+  width: 45%;
+  height: calc(100vh - 317px);
   margin: auto;
   overflow-y: scroll;
   font-weight: bold;
